src/components/PortfolioTable.css
.portfolio-table-container {
  width: 80vw;
  height: 60vh;
  background: #fff;
}

.portfolio-table-header {
  background-color: #e3e9f6 !important;
  color: #222 !important;
  font-weight: 600;
  font-size: 15px;
}

.portfolio-table-row-striped {
  background-color: #f6f6f6 !important;
}

/* Lower row height for Equity - Current table */
.portfolio-table-container .rdt_TableRow {
  min-height: 24px !important;
  height: 48px !important;
  padding-top: 0 !important;
  padding-bottom: 0 !important;
}

.resizable-header {
  display: flex;
  align-items: center;
  min-width: 50px;
  position: relative;
}

.resizable-header-label {
  flex: 1;
}

.resizable-header-handle {
  width: 6px;
  cursor: col-resize;
  height: 32px;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 10;
}

.portfolio-table-textarea {
  min-width: 200px;
  max-width: 100%;
  resize: both;
  box-sizing: border-box;
  overflow: auto;
  height: 60px;
}

